--- a/StyleSheet1.css
+++ b/StyleSheet1.css
@@ -57,3 +57,8 @@ h2 {
     border: 1px solid #333;
     margin: 10px;
 }
+
+.navigation a:hover {
+  background-color: rgb(221, 221, 221);
+  color: black;
+}
