--- a/servicesStyleSheet.css
+++ b/servicesStyleSheet.css
@@ -1,3 +1,72 @@
-﻿body
-{
+﻿html {
+    height: 100%;
+}
+
+body {
+    background-image: url(images/services.jpg);
+}
+
+.container {
+    margin-left: auto;
+    margin-right: auto;
+    width: 1024px;
+}
+header {
+    height: 118px;
+    text-align: center;
+}
+nav {
+    background-color: rgba(0, 0, 0, 0.338);
+    text-align: center;
+    padding-top: 14px;
+    padding-left:20px;
+    padding-right:20px;
+   
+}
+a{
+    color:White;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+nav a {
+    text-decoration: none;
+    font-size: 25px;
+    padding-left:15px;
+    padding-right:15px;
+}
+h1 {
+    background-color: rgba(0, 0, 0, 0.338);
+    text-align: center;
+    color: white;
+    font-size: 60px;
+    margin-top: auto;
+}
+h2 {
+    background-color: rgba(0, 0, 0, 0.338);
+    text-align: center;
+    color: white;
+    font-size: 40px;
+    margin-top: auto;
+}
+
+.logo {
+    position:absolute;
+    top:0;
+    left:0;
+    width: 150px;
+    height: 100px;
+    border: 1px solid #333;
+    margin: 10px;
+}
+
+body {
+    background-color: rgba(0, 0, 0, 0.338);
+    color: white;
+    font-size: 40px;
+    margin-top: auto;
+}
+
+
+.navigation a:hover {
+  background-color: rgb(221, 221, 221);
+  color: black;
 }
